--- a/.github/DISCUSSION_TEMPLATE/proposals.yml
+++ b/.github/DISCUSSION_TEMPLATE/proposals.yml
@@ -1,6 +1,20 @@
 title: "DRAFT: <title> "
 labels: ["wip"]
 body:
+  - type: checkboxes
+    attributes:
+      label: "Proposal Submission Steps"
+      options:
+        - label: Title: briefly describes the proposed change in 5-10 words
+          required: true
+        - label: Motivation/Benefits: clearly outline all of the benefits of the proposed solution
+          required: true
+        - label: Costs: briefly summarize the cost (to all stakeholders) of completion or on-going support of the proposed solution
+          required: true
+        - label: Risks and Mitigations: clearly outline all of the known risks and potential mitigations
+          required: true
+        - label: Solution: if known, describe with detail the work required to execute the proposed solution
+        - label: Acceptance: if known, describe the conditions which complete this proposal
   - type: textarea
     id: motivation
     attributes:
