--- a/.github/DISCUSSION_TEMPLATE/proposals.yml
+++ b/.github/DISCUSSION_TEMPLATE/proposals.yml
@@ -1,25 +1,11 @@
-title: "DRAFT: <title> "
+title: "LEP-XXX: <title>"
 labels: ["wip"]
 body:
-- type: checkboxes
-  attributes:
-    label: "Proposal Submission Steps"
-    options:
-    - label: "Title: briefly describes the proposed change in 5-10 words"
-      required: true
-    - label: "Motivation/Benefits: clearly outline all of the benefits of the proposed solution"
-      required: true    
-    - label: "Costs: briefly summarize the cost (to all stakeholders) of completion or on-going support of the proposed solution"
-      required: true    
-    - label: "Risks and Mitigations: clearly outline all of the known risks and potential mitigations"
-      required: true    
-    - label: "Solution: if known, describe with detail the work required to execute the proposed solution"
-    - label: "Acceptance: if known, describe the conditions which complete this proposal"
 - type: textarea
   id: motivation
   attributes:
-    label: "Motivation and Benefits"
-    description: "What is motivating the creation of the proposal? Be brief. Use bullets. Make it easy to scan. If details are needed for clarity, adde them after the bullets."
+    label: "Summary and Motivation"
+    description: "What is the problem? What is motivating the creation of the proposal? Be brief. Use bullets. Make it easy to scan. If details are needed for clarity, adde them after the bullets."
     placeholder: |
       - Why is this proposal important? Describe the pain or improvement we hope to fix.
       - What is the cost of not accepting this proposal now?
@@ -27,19 +13,22 @@ body:
 
       Add any verbose descriptions or details after your summarized bullets above.
 - type: textarea
-  id: costs
+  id: solution
   attributes:
-    label: "Costs"
-    description: "Outline expected time, money, and overhead costs. One-time vs on-going. Consider planning, design, development, infrastructure, production support."
+    label: "Solution and Benefits"
+    description: "Summarize the solution and its benefits. Outline the steps required to execute the proposed solution. These steps should be actionable upon acceptance of the proposal by all stakeholders. They should be clear enough to be actionable by the executing stakeholder... consider that this may not be the proposal's author."
     placeholder: |
+      - Briefly describe the solution and why it's beneficial to stakeholders.
+      - Outline high-level steps toward completion of the solution.
       - What are the upfront costs?
       - What are on-going costs?
       - Which stakeholders would want to understand and/or approve these costs.
+      - If the solution requires ongoing maintenance, describe the costs and effort required. How long will this ongoing maintenance be required?
 - type: textarea
   id: risks
   attributes:
     label: "Risks and Mitigations"
-    description: "Outline potential ways this proposal's solution might fail or cause problems. Consider the entire lifecycle of the solution. Before, during, and after delivery."
+    description: "Outline potential ways this proposal's solution might fail or cause problems. Consider the entire lifecycle of the solution. Before, during, and after delivery. How would be prevent failure?"
     placeholder: |
       <brief description of a single risk concern>
 
@@ -47,22 +36,21 @@ body:
 
       (optional: Briefly describe how we might mitigate this risk from occurring.)
 - type: textarea
-  id: solution
-  attributes:
-    label: "Solution"
-    description: "Outline the steps required to execute the proposed solution. These steps should be actionable upon acceptance of the proposal by all stakeholders. They should be clear enough to be actionable by the executing stakeholder... consider that this may not be the proposal's author."
-    placeholder: |
-      1. Step one of solution.
-      2. Step two of solution.
-
-      alternatively... if steps are not necessarily sequential, you could use bullets:
-
-      - Solution component #1
-      - Solution component #2
-- type: textarea
   id: acceptance
   attributes:
     label: "Acceptance Criteria"
     description: "Which stakeholders will validate the completion of this proposal. If the proposal is an on-going solution, this should indicate how much work is needed for the solution to be passively maintained."
     placeholder: |
       - {Stakeholder} verifies that {Feature} can do {Benefit} {given {Conditions}}
+- type: checkboxes
+  attributes:
+    label: "Proposal Submission Steps"
+    options:
+    - label: "Title: briefly describes the proposed change in 5-10 words. Replace `XXX` with the next sequential number."
+      required: true
+    - label: "Summary and Motivation: clearly outline the problem, what motivates us to solve this problem, and the benefits of the proposed solution"
+      required: true
+    - label: "(optional) Solution and Benefits: if known, describe with detail the work required to execute the proposed solution"
+    - label: "Risks and Mitigations: clearly outline all of the known risks and potential mitigations"
+      required: true
+    - label: "(optional) Acceptance Criteria: if known, describe the conditions which complete this proposal"
